# ElanFileHelper

./: CMakeLists.txt  README.md
include/: BatchFileHelper.cpp  BatchFileHelper.h  FileHelper.cpp  FileHelper.h
tests/: smoke_test.cpp
